# SResourceCompiler

./: CMakeLists.txt  LICENSE  README.md  TODO
src/: a.cpp  exception.cpp  exception.h  main.cpp
